--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "grunt-browserify": "~1.2",
     "mocha": "1.13.0",
     "chai": "~1.8.0",
-    "grunt-mocha": "~0.4.7"
+    "grunt-mocha": "~0.4.7",
+    "grunt-develop": "~0.3.0",
+    "express": "~3.4.7",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-open": "~0.2.2",
+    "cors": "~2.1.1"
   },
   "repository": {
-    "type" : "git",
-    "url"  : "https://github.com/rvangundy/rest-client.git"
+    "type": "git",
+    "url": "https://github.com/rvangundy/rest-client.git"
   }
 }
